# ROS-Kinect

./: README.md
PyKinectBodyGame/: PyKinectBodyGame.py
ros2_kinect_driver/: README.md  package.xml  setup.cfg  setup.py
ros2_kinect_driver/src/: PyKinectBodyGame.py  PyKinectRuntime.py  PyKinectV2.py  human_joint_pose_publisher.py
unification_ros2_messages/: CMakeLists.txt  moveit_sp_to_uni_mpr.yaml  moveit_uni_to_sp_mpr.yaml  package.xml  robotiq_sp_to_uni_mpr.yaml  robotiq_uni_to_sp_mpr.yaml  updater_sp_to_uni_mpr.yaml  updater_uni_to_sp_mpr.yaml
unification_ros2_messages/launch/: unification_bridges.launch.py
unification_ros2_messages/msg/: HumanJoints.msg  JointPosition.msg  KinectHumans.msg  MoveItSPToUni.msg  MoveItUniToSP.msg  RobotiqSPToUni.msg  RobotiqUniToSP.msg  UpdaterSPToUni.msg  UpdaterUniToSP.msg
