<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unification_ros2_messages</name>
  <version>0.0.0</version>
  <description>Custom messages for the Unification project</description>
  <maintainer email="martin.dahl@gmail.com">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <ros1_bridge mapping_rules="moveit_uni_to_sp_mpr.yaml"/>
    <ros1_bridge mapping_rules="moveit_sp_to_uni_mpr.yaml"/>
    <ros1_bridge mapping_rules="robotiq_sp_to_uni_mpr.yaml"/>
    <ros1_bridge mapping_rules="robotiq_uni_to_sp_mpr.yaml"/>
    <ros1_bridge mapping_rules="updater_sp_to_uni_mpr.yaml"/>
    <ros1_bridge mapping_rules="updater_uni_to_sp_mpr.yaml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
